<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Weather Photo</string>
    <string name="no_text" />
    <string name="default_notification_channel_id">weather_photo_default_channel</string>
    <string name="default_notification_channel_name">weather_photo_news</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam,</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="ago">ago</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="min">min</string>
    <string name="mins">mins</string>
    <string name="hr">hr</string>
    <string name="hrs">hrs</string>
    <string name="in_2_days">in 2 days</string>
    <string name="in_3_days">in 3 days</string>
    <string name="in_4_days">in 4 days</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="just_now">just now</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="_3_days_ago">3 days ago</string>
    <string name="_4_days_ago">4 days ago</string>
    <string name="in">in</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="please_wait">Please wait...</string>
    <string name="error_while_open_link">Error while open link</string>
    <string name="share_via">Share via</string>
    <string name="no_connection">No connection</string>
    <string name="server_connection_faild">Server Connection Faild!</string>
    <string name="something_went_wrong_please_try_again_">Something went wrong, Please try again.</string>
    <string name="no_connection_tap_to_retry">No internet connection</string>
    <string name="no_internet_connection">No internet connection, Please try again.</string>
    <string name="you_are_offline">You are offline</string>
    <string name="server_connection_failed">Server connection failed</string>
    <string name="try_again">Try again</string>
    <string name="error">Error</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_underline">
    <u>Cancel</u>
  </string>
    <string name="ok">OK</string>
    <string name="oh_no">Oh no!</string>
    <string name="log_out">Log out</string>
    <string name="empty_history">Empty History</string>
    <string name="there_is_no_added_photo">There is no added photo</string>
    <string name="add_new_photo">Add New Photo</string>
    <string name="place_name">Place Name</string>
    <string name="temperature_with_degree">%s\u2103</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="clear">Clear</string>
    <string name="you_must_allow_location_permission">You must allow location permission</string>
    <string name="location_required">Location required</string>
    <string name="you_must_enable_device_location_to_get_data_based_on_your_location">You must enable device location to get data based on your location</string>
    <string name="fetching_weather_data">Fetching weather data</string>
    <string name="edit_location">Edit Location</string>
    <string name="required_input">Required input</string>
    <string name="fetching_your_location">Fetching your location</string>
    <string name="cant_find_the_image_file">Can\'t find the image file</string>
    <string name="please_wait_until_fetching_location_data">Please wait until fetching location data</string>


</resources>

