<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.weather.photo.view.activity.captureImage.CaptureImageViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:id="@+id/layoutActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@drawable/layout_bg_transparent_gray_selector_with_bg_transparent"
                android:onClick="@{()->viewModel.observer.finishWithCancel()}"
                android:padding="@dimen/padding_20"
                android:src="@drawable/back_white_icon" />

            <LinearLayout
                android:id="@+id/layoutDoneRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivRetry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:background="@drawable/layout_bg_transparent_gray_selector_with_bg_transparent"
                    android:onClick="@{()->viewModel.observer.onPrepareNewImageViews()}"
                    android:padding="@dimen/padding_20"
                    android:src="@drawable/close_white_icon" />

                <ImageView
                    android:id="@+id/ivDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_20"
                    android:adjustViewBounds="true"
                    android:background="@drawable/layout_bg_transparent_gray_selector_with_bg_transparent"
                    android:onClick="@{()->viewModel.observer.onFinishWithSuccess()}"
                    android:padding="@dimen/padding_20"
                    android:src="@drawable/done_white_icon" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutFlash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/layoutDoneRetry"
                android:layout_toEndOf="@id/ivBack">

                <ImageView
                    android:id="@+id/iv_camera_flash_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/iv_camera_flash_auto"
                    android:alpha="0.4"
                    android:background="@drawable/layout_bg_transparent_gray_selector_with_bg_transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{()->viewModel.observer.setCameraFlashOff()}"
                    android:padding="@dimen/padding_15"
                    android:src="@drawable/ic_flash_off" />

                <ImageView
                    android:id="@+id/iv_camera_flash_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_camera_flash_auto"
                    android:alpha="0.4"
                    android:background="@drawable/layout_bg_transparent_gray_selector_with_bg_transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{()->viewModel.observer.setCameraFlashOn()}"
                    android:padding="@dimen/padding_15"
                    android:src="@drawable/ic_flash_on" />

                <ImageView
                    android:id="@+id/iv_camera_flash_auto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/layout_bg_transparent_gray_selector_with_bg_transparent"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{()->viewModel.observer.setCameraFlashAuto()}"
                    android:padding="@dimen/padding_15"
                    android:src="@drawable/ic_flash_auto" />


            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutCapture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="@dimen/padding_20">

            <ImageView
                android:id="@+id/ivSwitchCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/padding_20"
                android:background="@drawable/circle_bg_transparent_strok_white_with_transparent_gray_selector"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->viewModel.observer.onSwitchCamera()}"
                android:padding="@dimen/padding_20"
                android:src="@drawable/ic_camera_rotation" />

            <ImageView
                android:id="@+id/iv_capture_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/circle_bg_transparent_strok_white_with_transparent_gray_selector"
                android:contentDescription="@string/app_name"
                android:onClick="@{()->viewModel.observer.onStartCapture()}"
                android:padding="@dimen/padding_20"
                android:src="@drawable/camera_menu_icn" />

        </RelativeLayout>

        <com.weather.photo.cameraCore.AutoFitTextureView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layoutCapture"
            android:layout_below="@id/layoutActionBar"
            android:adjustViewBounds="true"
            android:keepScreenOn="true" />

        <FrameLayout
            android:id="@+id/cameraPreviewPreLoliPop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layoutCapture"
            android:layout_below="@id/layoutActionBar" />

        <RelativeLayout
            android:id="@+id/finalPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/layoutCapture"
            android:layout_below="@id/layoutActionBar">

            <ImageView
                android:id="@+id/ivImageCaptured"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:scaleType="fitCenter" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent23_colorPrimaryDark">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_10"
                    android:fontFamily="@font/avenir_roman"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:padding="@dimen/padding_10"
                    android:text="@{viewModel.connectionErrorMessage}"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/font_size_16"
                    android:visibility="@{viewModel.isShowLoader()?View.VISIBLE:View.GONE}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->viewModel.observer.openLocationDetails()}"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_10"
                    android:visibility="@{viewModel.isShowLoader()?View.GONE:View.VISIBLE}">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_30"
                        android:layout_marginEnd="@dimen/padding_30"
                        android:ellipsize="end"
                        android:fontFamily="@font/avenir_heavy"
                        android:hint="@string/place_name"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:text="@{viewModel.placeName}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/font_size_26" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/padding_30"
                        android:layout_marginEnd="@dimen/padding_30"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/avenir_heavy"
                                android:includeFontPadding="false"
                                android:text="@{@string/temperature_with_degree(viewModel.tempr)}"
                                android:textColor="@color/white"
                                android:textColorHint="@color/white"
                                android:textSize="@dimen/font_size_25" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/avenir_roman"
                                    android:includeFontPadding="false"
                                    android:text="@{@string/temperature_with_degree(viewModel.minTempr)}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_14" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_5"
                                    android:layout_marginEnd="@dimen/padding_5"
                                    android:fontFamily="@font/avenir_heavy"
                                    android:includeFontPadding="false"
                                    android:text="/"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_14" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/avenir_roman"
                                    android:includeFontPadding="false"
                                    android:text="@{@string/temperature_with_degree(viewModel.maxTempr)}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_14" />

                            </LinearLayout>
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/padding_15"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/avenir_roman"
                                    android:hint="@string/today"
                                    android:includeFontPadding="false"
                                    android:maxLines="1"
                                    android:text="@{viewModel.dayOfWeek}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_20" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_15"
                                    android:fontFamily="@font/avenir_roman"
                                    android:includeFontPadding="false"
                                    android:text="->"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_20" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_10"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/avenir_roman"
                                    android:hint="@string/clear"
                                    android:includeFontPadding="false"
                                    android:maxLines="1"
                                    android:text="@{viewModel.weatherStatus}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_20" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/padding_5"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/avenir_roman"
                                    android:hint="@string/time"
                                    android:includeFontPadding="false"
                                    android:maxLines="1"
                                    android:text="@{viewModel.time}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_16" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/padding_10"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/avenir_roman"
                                    android:hint="@string/date"
                                    android:includeFontPadding="false"
                                    android:maxLines="1"
                                    android:text="@{viewModel.date}"
                                    android:textColor="@color/white"
                                    android:textColorHint="@color/white"
                                    android:textSize="@dimen/font_size_16" />

                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>


    </RelativeLayout>

</layout>